fix overflow and change about

--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -1,24 +1,25 @@
 .about p {
-    text-align: justify;
+    text-align: left;
 }
 
 .about-text {
-    font-size: 18px;
-    justify-content: center;
+    font-size: 24px;
 }
 
-.about {
-    /* margin-top: 100vh; */
+.about-container {
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
 }
 
 .team {
-    margin-top: 75px;
+    margin-top: 50px;
     margin-bottom: 100px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
     column-gap: 50px;
-    row-gap: 50px;
+    row-gap: 50px
 }
 
 .team-card {
@@ -35,7 +36,7 @@
 .team-card > img {
     margin-top: 20px;
     border-radius: 50%;
-    height: 150px;
+    height: 200px;
 }
 
 .team-card-text {
