--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
 }
 
 a {
@@ -21,4 +22,12 @@ a {
     color: white;
     background: black;
   }
+}
+
+h1 {
+  font-size: 48px;
+}
+
+h2 {
+  font-size: 24px;
 }
